--- a/Pipe-and-Filter/src/view/PipeView.form
+++ b/Pipe-and-Filter/src/view/PipeView.form
@@ -54,6 +54,7 @@
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="ff" green="ff" red="ff" type="rgb"/>
         </Property>
+        <Property name="name" type="java.lang.String" value="Piper and Filter" noResource="true"/>
       </Properties>
 
       <Layout>
